# hello-django

./: db.sqlite3  pyproject.toml
hello_django/: settings.py  urls.py  views.py
hello_django/calc/: urls.py  views.py
